; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dsound/extr_dsound_convert.c_convert_ieee_32_to_8.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dsound/extr_dsound_convert.c_convert_ieee_32_to_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32, i32, i64, i32, i32)* @convert_ieee_32_to_8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_ieee_32_to_8(i8* %0, i8* %1, i32 %2, i32 %3, i64 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca float, align 4
  %17 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  br label %18

18:                                               ; preds = %41, %7
  %19 = load i64, i64* %12, align 8
  %20 = icmp sgt i64 %19, 0
  br i1 %20, label %21, label %53

21:                                               ; preds = %18
  %22 = load i8*, i8** %8, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @le32(i32 %24)
  store i32 %25, i32* %15, align 4
  %26 = bitcast i32* %15 to float*
  %27 = load float, float* %26, align 4
  store float %27, float* %16, align 4
  store i32 0, i32* %17, align 4
  %28 = load float, float* %16, align 4
  %29 = fcmp olt float %28, -1.000000e+00
  br i1 %29, label %30, label %31

30:                                               ; preds = %21
  store i32 -128, i32* %17, align 4
  br label %41

31:                                               ; preds = %21
  %32 = load float, float* %16, align 4
  %33 = fcmp ogt float %32, 1.000000e+00
  br i1 %33, label %34, label %35

34:                                               ; preds = %31
  store i32 127, i32* %17, align 4
  br label %40

35:                                               ; preds = %31
  %36 = load float, float* %16, align 4
  %37 = fmul float %36, 1.275000e+02
  %38 = fsub float %37, 5.000000e-01
  %39 = fptosi float %38 to i32
  store i32 %39, i32* %17, align 4
  br label %40

40:                                               ; preds = %35, %34
  br label %41

41:                                               ; preds = %40, %30
  %42 = load i32, i32* %17, align 4
  %43 = xor i32 %42, 128
  %44 = load i8*, i8** %9, align 8
  %45 = bitcast i8* %44 to i32*
  store i32 %43, i32* %45, align 4
  %46 = load i8*, i8** %9, align 8
  %47 = load i32, i32* %11, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8, i8* %46, i64 %48
  store i8* %49, i8** %9, align 8
  %50 = load i32, i32* %10, align 4
  %51 = load i32, i32* %14, align 4
  %52 = call i32 @src_advance(i8** %8, i32 %50, i64* %12, i32* %13, i32 %51)
  br label %18

53:                                               ; preds = %18
  ret void
}

declare dso_local i32 @le32(i32) #1

declare dso_local i32 @src_advance(i8**, i32, i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
